<resources>
    <string name="app_name">Buddify</string>
    <string name="splash_button_text">Get Started</string>
    <string name="header_text">Sign Up Here!</string>
    <string name="name_text">Name</string>
    <string name="name_hint">Enter your name...</string>
    <string name="email_text">E-Mail</string>
    <string name="email_hint">Enter your e-mail...</string>
    <string name="pass_text">Password</string>
    <string name="pass_hint">Enter your password...</string>
    <string name="register_button_text">Create Account</string>
    <string name="homepage_text">Already have an account? Sign in.</string>
    <string name="welcome_text">Welcome!</string>
    <string name="new_account_text">Need new Account? Sign up here!</string>
    <string name="login_button_text">Login</string>
    <string name="forget_pass_text">Forgot password?</string>
    <string name="home_nav_text">Home</string>
    <string name="users_nav_text">Users</string>
    <string name="add_blogs_text">Add</string>
    <string name="chat_nav_text">Chat</string>
    <string name="profile_nav_text">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_pic">Update Profile Pic</string>
    <string name="edit_profile_name">Update Profile Name</string>
    <string name="edit_profile_pass">Change Password</string>
    <string name="update_pass_text">Update Password</string>
    <string name="old_pass_hint">Old password</string>
    <string name="new_pass_hint">New password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>