<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_nav_text"/>

    <item
        android:id="@+id/nav_users"
        android:icon="@drawable/ic_users"
        android:title="@string/users_nav_text"/>

    <item
        android:id="@+id/nav_add_blogs"
        android:icon="@drawable/ic_add"
        android:title="@string/add_blogs_text"/>

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat_nav_text"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_nav_text"/>

</menu>