<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/email_text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/pass_text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit"
            android:drawableStart="@drawable/password"
            android:hint="@string/pass_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:autofillHints="" />


        <TextView
            android:id="@+id/forget_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="23dp"
            android:text="@string/forget_pass_text"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:padding="4dp"
            android:text="@string/login_button_text"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:background="@drawable/buttonss"/>

        <TextView
            android:id="@+id/new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="23dp"
            android:text="@string/new_account_text"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold"/>

</LinearLayout>